Speculative Decoding Appendix Expansion (#69)
* Added a section on speculative decoding limitations/techniques to overcome them

* Updated wording in speculative decoding section

* Updated wording for speculative decoding appendix

* Updated wording to remove excess details is speculative decoding section.

---------

Co-authored-by: Stefan Zorcic <stefanzorcic@stefans-mbp-2.home>

--- a/assets/bibliography/main.bib
+++ b/assets/bibliography/main.bib
@@ -1,3 +1,23 @@
+@ARTICLE{medusa,
+  title         = "Medusa: Simple LLM Inference Acceleration Framework with Multiple Decoding Heads",
+  author        = "Cai, Tianle and Li, Yuhong and Geng, Zhengyang and Peng, Hongwu and Lee, Jason and Chen, Deming and Dao, Tri”",
+  journal       = "arXiv [cs.LG]",
+  month         =  jan,
+  year          =  2024,
+  archivePrefix = "arXiv",
+  primaryClass  = "cs.LG"
+}
+
+@ARTICLE{eagle,
+  title         = "EAGLE: Speculative Sampling Requires Rethinking Feature Uncertainty",
+  author        = "Li, Yuhui and Wei, Fangyun and Zhang, Chao and Zhang, Hongyang",
+  journal       = "arXiv [cs.LG]",
+  month         =  jan,   
+  year          =  2024, 
+  archivePrefix = "arXiv",
+  primaryClass  = "cs.LG"
+}
+
 @ARTICLE{spec1,
   title         = "Fast inference from Transformers via speculative decoding",
   author        = "Leviathan, Yaniv and Kalman, Matan and Matias, Yossi",
