Fix Noam Shazeer's name in bibliography. (#80)

--- a/assets/bibliography/main.bib
+++ b/assets/bibliography/main.bib
@@ -454,7 +454,7 @@
 
 @ARTICLE{mqa,
   title         = "Fast Transformer decoding: One write-head is all you need",
-  author        = "Noam, Shazeer",
+  author        = "Shazeer, Noam",
   journal       = "arXiv [cs.NE]",
   month         =  nov,
   year          =  2019,
